--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -228,6 +229,6 @@
   </template>
   <script src="js/thumbnail.js"></script>
   <script src="vendor/pristine/pristine.main.js"></script>
-
+  <script src="./vendor/nouislider/nouislider.js"></script>
 </body>
 </html>
