--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <script src="js/main.js" type="module"></script>
+  <script src = "js/newPublication.js" type = "module"></script>
+  <script type="text/javascript" src="sha256-Pristine-d2ee511/dist/pristine.js"></script>
+  <script src="vendor/nouislider/nouislider.js"></script>
   <main>
 
     <!-- Фильтрация изображений от других пользователей -->
@@ -31,7 +35,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off" method="post" action="https://29.javascript.pages.academy/kekstagram" enctype="multipart/form-data"></form>
+          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -120,7 +124,8 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."
+                    method="post" enctype="multipart/form-data"></textarea>
                   </div>
                 </fieldset>
 
@@ -155,7 +160,7 @@
           </div>
 
           <!-- Комментарии к изображению -->
-          <div class="social__comment-count">5 из <span class="comments-count">125</span> комментариев</div>
+          <div class="social__comment-count"><span class="loaded-comments-count">5</span> из <span class="comments-count"></span> комментариев</div>
           <ul class="social__comments">
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35" height="35">
@@ -213,7 +218,7 @@
     <section class="error">
       <div class="error__inner">
         <h2 class="error__title">Ошибка загрузки файла</h2>
-        <button type="button" class="error__button">Попробовать ещё раз</button>
+        <button type="button" class="error__button">Загрузить другой файл</button>
       </div>
     </section>
   </template>
@@ -227,8 +232,11 @@
       </div>
     </section>
   </template>
-  <script src="js/thumbnail.js"></script>
-  <script src="vendor/pristine/pristine.main.js"></script>
-  <script src="./vendor/nouislider/nouislider.js"></script>
+
+  <!-- Экран загрузки изображения -->
+  <template id="messages">
+    <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
+  </template>
+
 </body>
 </html>
