--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <script src="js/main.js" type="module"></script>
   <script src = "js/newPublication.js" type = "module"></script>
-  <script type="text/javascript" src="sha256-Pristine-d2ee511/dist/pristine.js"></script>
+  <script type="text/javascript" src="vendor/pristine/pristine.min.js"></script>
   <script src="vendor/nouislider/nouislider.js"></script>
   <main>
 
