--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <script src="js/main.js" type="module"></script>
-  <script src = "js/newPublication.js" type = "module"></script>
+  <script src = "js/new-publication.js" type = "module"></script>
   <script type="text/javascript" src="vendor/pristine/pristine.min.js"></script>
   <script src="vendor/nouislider/nouislider.js"></script>
   <main>
